# CW_5th_course

./: .gitignore  README.md
Task 4/: F(z).ipynb
Task_1_Karman/: CMakeLists.txt  main.cpp  plots.py  solver.cpp  solver.hpp  stream.hpp  vector.hpp
Task_1_Karman/python_scripts/: all_eps_parameters.py  plots.py  plots_scipy.py  streamlines_one_file.py  streamlines_plot.py  two_branch_solution_difference.py  velocity_plots.py
Task_1_Karman/results/: all_s_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.0000/: common_parameters.csv  result.csv  result_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.0100/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.0500/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.1000/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.1100/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.1500/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/first_solution/eps_-0.1510/: common_parameters.csv  result.csv  result_parameters.csv  shooting_parameters.csv
Task_1_Karman/results/plots_to_report/: two_braches.csv  two_branches.csv
Task_1_Karman/system/: system_helpers.cpp  system_helpers.hpp
Task_2/: ADT.cpp  CMakeLists.txt
Task_3/: .gitignore  (+8 more)
(+407 files in other folders)
